<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:layout_margin="120dp"
        android:text="@string/WELCOME"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:background="#FF5733 "
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/FIRST"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/saiUserNameQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:layout_margin="30dp"
        android:hint="@string/firstInput" />

    <Button
        android:id="@+id/btnPlayQuiz"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/green1"
        android:paddingHorizontal="14dp"
        android:text="@string/buttonPlay"
        android:textStyle="bold"
        android:textSize="17sp"/>


</LinearLayout>