<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="@dimen/size_5"
            android:layout_marginLeft="@dimen/size_15"
            android:layout_marginRight="@dimen/size_15"
            android:layout_marginTop="@dimen/size_50"
            android:elevation="@dimen/size_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:elevation="@dimen/size_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/size_30"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_text_25"
                    android:textStyle="bold"
                    android:text="@string/Register_open_snippets"
                    android:paddingBottom="@dimen/size_30"/>


                <RadioGroup
                    android:orientation="horizontal"
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_10"
                    android:background="@color/grey">

                    <RadioButton
                        android:id="@+id/radio_btn1_register_os"
                        android:layout_marginStart="@dimen/size_20"
                        android:layout_marginEnd="@dimen/size_60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sexe_feminin"/>

                    <RadioButton
                        android:id="@+id/radio_btn2_register_os"
                        android:paddingEnd="@dimen/size_90"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sexe_masculin"
                        tools:ignore="RtlSymmetry" />

                </RadioGroup>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_10"
                    android:backgroundTint="@color/grey">

                    <Spinner
                        android:id="@+id/spinner_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/size_15"
                        android:hint = "@string/level_student"
                        tools:ignore="InvalidId" />

                </androidx.cardview.widget.CardView>


                <EditText
                    android:layout_marginBottom="@dimen/size_10"
                    android:id="@+id/edit_name_register_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:padding="@dimen/size_15"
                    android:hint="@string/Name"/>

                <EditText
                    android:layout_marginBottom="@dimen/size_10"
                    android:id="@+id/phone_register_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@color/grey"
                    android:padding="@dimen/size_15"
                    android:hint="@string/phone"/>


                <EditText
                    android:id="@+id/edit_email_register_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="@dimen/size_10"
                    android:background="@color/grey"
                    android:padding="@dimen/size_15"
                    android:hint="@string/email"/>


                <EditText
                    android:id="@+id/edit_password_register_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_10"
                    android:inputType="textPassword"
                    android:padding="@dimen/size_15"
                    android:background="@color/grey"
                    android:hint="@string/password"/>


                <EditText
                    android:id="@+id/edit_confirm_password_register_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/size_15"
                    android:background="@color/grey"
                    android:layout_marginBottom="@dimen/size_30"
                    android:hint="@string/confirm_password"/>



                    <LinearLayout
                        android:weightSum="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_View_Login_Register_OS"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"/>

                        <com.google.android.material.button.MaterialButton
                            app:elevation="@dimen/size_5"
                            android:clickable="true"
                            android:id="@+id/btn_create_account_register_os"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:text="@string/create_account"
                            android:layout_marginBottom="@dimen/size_10"
                            android:focusable="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/size_10"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:layout_weight="1"
                            android:id="@+id/btn_formQuiz"
                            android:layout_marginRight="@dimen/size_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/green1"
                            android:text="@string/quiz"/>

                        <Button
                            android:layout_weight="1"
                            android:id="@+id/btn_form1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/form1"/>
                    </LinearLayout>


            </LinearLayout>





        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>





</RelativeLayout>