<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/return_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginBottom="@dimen/size_10"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/text_edit_profile"
        android:layout_below="@+id/return_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingStart="@dimen/size_20"
        android:textSize="@dimen/size_text_30"
        android:textStyle="bold"
        android:text="@string/edit_profile"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:elevation="@dimen/size_5"
        android:id="@+id/img"
        android:layout_below="@+id/text_edit_profile"
        android:layout_marginTop="@dimen/size_20"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_100"
        android:src="@drawable/woman" />

    <LinearLayout
        android:weightSum="1"
        android:id="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_weight="0.5"
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/gris"
            android:textSize="@dimen/size_text_15" />

        <TextView
            android:gravity="end"
            android:layout_weight="0.5"
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myName"
            android:textSize="@dimen/size_text_15" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_below="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

    <LinearLayout
        android:id="@+id/email"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/email"
            android:textColor="@color/gris"
            android:textSize="@dimen/size_text_15"/>

        <TextView
            android:id="@+id/email_profile"
            android:gravity="end"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="@dimen/size_text_15"/>

    </LinearLayout>


    <View
        android:id="@+id/email_line"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

    <LinearLayout
        android:id="@+id/phone"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/phone"
            android:textColor="@color/gris"
            android:textSize="@dimen/size_text_15"/>


        <TextView
            android:id="@+id/phone_profile"
            android:gravity="end"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/size_text_15"/>

    </LinearLayout>

    <View
        android:id="@+id/phone_number_line"
        android:layout_below="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

    <LinearLayout
        android:id="@+id/sex"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sex"
            android:textColor="@color/gris"
            android:textSize="@dimen/size_text_15"/>


        <TextView
            android:id="@+id/sex_profile"
            android:gravity="end"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexe_masculin"
            android:textSize="@dimen/size_text_15"/>

    </LinearLayout>

    <View
        android:id="@+id/line_sex"
        android:layout_below="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>
    <LinearLayout
        android:id="@+id/level"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_sex"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/level_student"
            android:textColor="@color/gris"
            android:textSize="@dimen/size_text_15"/>


        <TextView
            android:id="@+id/level_profile"
            android:gravity="end"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_student"
            android:textSize="@dimen/size_text_15"/>

    </LinearLayout>

    <View
        android:id="@+id/line_level"
        android:layout_below="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>



    <com.google.android.material.card.MaterialCardView
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/size_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue1">

        <LinearLayout
            android:baselineAligned="true"
            android:padding="@dimen/size_10"
            android:id="@+id/bottom_bar"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_search_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/explore" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trip"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_trip_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/trip"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/icons8_administrator_male_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile"/>

            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



</RelativeLayout>