<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/return_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/size_10"/>

    <TextView
        android:id="@+id/text_edit_profile"
        android:layout_below="@+id/return_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/size_20"
        android:textSize="@dimen/size_text_30"
        android:textStyle="bold"
        android:text="@string/edit_profile"/>

    <ImageView
        android:id="@+id/img"
        android:layout_below="@+id/text_edit_profile"
        android:layout_marginTop="@dimen/size_20"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_100"
        android:src="@drawable/woman" />

    <LinearLayout
        android:weightSum="1"
        android:id="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

            <TextView
                android:gravity="start"
                android:layout_weight="0.5"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/gris"
                android:textSize="@dimen/size_text_15" />

            <TextView
                android:gravity="end"
                android:layout_weight="0.5"
                android:id="@+id/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myName"
                android:textSize="@dimen/size_text_15" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_below="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/gris"
                android:textSize="@dimen/size_text_15"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="@dimen/size_text_15"/>
        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/email_line"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:paddingTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_20">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/gris"
                android:textSize="@dimen/size_text_15"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="@dimen/size_text_15"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/phone_number"
        android:layout_below="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:background="@color/gris"/>

</RelativeLayout>